DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Sep-29-2002 nonchocoboy Build and install the ConfigUpdater tool.
                        NEW VERSION: 0.9.2
Sep-27-2002 nonchocoboy Implemented editors for modifying a ChunkDesc's name,
                        token, and categories.
Sep-23-2002 nonchocoboy DataSources are reference counted in the ConfigBroker.
Sep-20-2002 jahare      Removed old JCCL network code.
Sep-15-2002 nonchocoboy ConfigChunks are now created on the fly as needed when
                        requested from a ConfigChunkDB. This allows client code
                        to follow includedesc directives before the Chunks in
                        the ConfigChunkDB try to use the chunk descs.
Sep-15-2002 patrickh    Disconnected unused JCCL network code from the build.
                        It will be replaced with the CORBA-based remote
                        reconfiguration code soon.
                        NEW VERSION: 0.9.0
Sep-14-2002 patrickh    Added an XSLT stylesheet that can upgrade configuration
                        files using version 2.0 of the file format to version
                        2.1.
Sep-12-2002 nonchocoboy Use Ant to build the java sources.
                        NEW VERSION: 0.8.7
Sep-11-2002 nonchocoboy Superceded vjInclude chunks with an XML processing
                        instruction for including files. Bumped config file
                        version to 2.1
                        NEW VERSION: 0.8.6
Sep-09-2002 patrickh    Added an XSLT stylesheet that can upgrade chunk
                        description files using version 2.0 of the file
                        format to version 2.1.
Aug-30-2002 nonchocoboy Removed outdated ConfigService and ConfigManagerService
                        since they have now been superceded by the
                        ConfigBroker. Made compilation of the C++ remote